<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseModeActivity">

    <ImageView
        android:src="@drawable/taxi2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:background="@color/colorPrimary"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/taxi_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/passengerButton"
            android:text="@string/i_m_a_passenger"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp" />

        <Button
            android:id="@+id/driverButton"
            android:text="@string/i_m_a_driver"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</FrameLayout>